src/test/ui/chalkify/chalk_initial_program.stderr
error[E0277]: the trait bound `f32: Foo` is not satisfied
  --> $DIR/chalk_initial_program.rs:15:13
   |
LL |     gimme::<f32>();
   |             ^^^ the trait `Foo` is not implemented for `f32`
   |
   = help: the following implementations were found:
             <i32 as Foo>
             <u32 as Foo>
note: required by a bound in `gimme`
  --> $DIR/chalk_initial_program.rs:9:13
   |
LL | fn gimme<F: Foo>() { }
   |             ^^^ required by this bound in `gimme`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
